force-app/main/default/objects/Investor_Participation__c/Investor_Participation__c.object-meta.xml
<CustomObject>
    <description>This allows the creation of investors engaged for the portion of the sell down relating to the specific distribution method OR sellers engaged for the purchase</description>
    <label>Investor Participation</label>
    <nameField>
        <displayFormat>IP -{000000}</displayFormat>
        <label>Investor Participation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investor Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>