force-app/main/default/objects/Investor_Participation__c/fields/Distribution__c.field-meta.xml
<CustomField>
    <fullName>Distribution__c</fullName>
    <description>US-4609/ SGPRT-623 Distribution linked to Investor Participation record</description>
    <label>Distribution</label>
    <referenceTo>Product_Distribution__c</referenceTo>
    <relationshipLabel>Investor Participations</relationshipLabel>
    <relationshipName>Investor_Participations</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>