force-app/main/default/objects/Investor_Participation__c/fields/Distribution_Fee__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Fee__c</fullName>
    <description>The fee to be earned by the investor OR fee purchased at
SGPRT-3852</description>
    <inlineHelpText>The fee to be earned by the investor OR fee purchased at.</inlineHelpText>
    <label>Distribution Fee (%)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>