force-app/main/default/objects/Investor_Participation__c/fields/Distribution_Margin__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Margin__c</fullName>
    <description>The margin to be earned by the investor OR margin purchased at.
SGPRT-3852</description>
    <inlineHelpText>The margin to be earned by the investor OR margin purchased at.
If Variable: input total margin in % above the applicable base rate quoted to client. If below, input with minus symbol.
If Fixed: input all-in fixed rate in %.
If Preference Share: input the applicable % of Prime as quoted to client.
If Insurance: Weighted Average insurance premium in %</inlineHelpText>
    <label>Distribution Margin (%)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>