force-app/main/default/objects/Investor_Participation__c/fields/Distribution_Party__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Party__c</fullName>
    <description>US-4609/ SGPRT-623 Name of Investors engaged for the portion of the sell down</description>
    <inlineHelpText>Enter names of investors engaged for the portion of the sell down relating to the specific distribution method OR sellers engaged for the purchase.</inlineHelpText>
    <label>Distribution Party</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Investor Participations</relationshipLabel>
    <relationshipName>Investor_Participations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>