force-app/main/default/objects/Investor_Participation__c/fields/Distribution_Party_Appetite__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Party_Appetite__c</fullName>
    <description>US-4609/ SGPRT-623Indicative appetite levels provided by the investors with whom the trade is explored</description>
    <inlineHelpText>Enter the indicative appetite levels provided by the investors with whom the trade is explored, for the portion of the sell down that relates to the specific distribution method OR enter the indicative amount seller wishes to sell.</inlineHelpText>
    <label>Distribution Party Appetite</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>