force-app/main/default/objects/Investor_Participation__c/fields/Distribution_Party_Bid_Price__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Party_Bid_Price__c</fullName>
    <description>Enter the bidding margin that accompanies investor&apos;s indicative appetite level OR margin offered by the seller
If Variable: input total margin in % above the applicable base rate quoted to client. If below, input with minus symbol.
If Fixed: input all-in fixed rate in %. 
If Preference Share: input the applicable % of Prime as quoted to client.
If Insurance: Weighted Average insurance premium in % US-4609/ SGPRT-623</description>
    <inlineHelpText>Enter the bidding margin that accompanies investor&apos;s indicative appetite level OR margin offered by the seller
If Variable: input total margin in % above the applicable base rate quoted to client. If below, input with minus symbol.
If Fixed: input all-in fixed rate in %. 
If Preference Share: input the applicable % of Prime as quoted to client.
If Insurance: Weighted Average insurance premium in %</inlineHelpText>
    <label>Distribution Party Bid Price (%)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>