force-app/main/default/objects/Investor_Participation__c/fields/Distribution_Party_Closed__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Party_Closed__c</fullName>
    <description>US-4609/ SGPRT-623 The amount of trade closed at with each investor for the portion of the sell down</description>
    <inlineHelpText>Enter the amount trade was closed at with each investor for the portion of the sell down that relates to the specific distribution method OR the amount trade was closed at with the seller</inlineHelpText>
    <label>Distribution Party Closed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>