force-app/main/default/objects/Investor_Participation__c/fields/Distribution_Party_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Party_Closed_Date__c</fullName>
    <description>US-4609/ SGPRT-623 Date that trade was closed at with each investor for the portion of sell down</description>
    <inlineHelpText>Enter the date trade was closed at with each investor for the portion of the sell down that relates to the specific distribution method OR the amount trade was closed at with the seller.</inlineHelpText>
    <label>Distribution Party Closed Date</label>
    <type>Date</type>
</CustomField>