force-app/main/default/objects/Investor_Participation__c/fields/Distribution_Party_Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Party_Decline_Reason__c</fullName>
    <description>US-4609/ SGPRT-623 Distribution Party Decline Reason</description>
    <label>Distribution Party Decline Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Distribution_Party_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Returns</fullName>
            </value>
            <value>
                <fullName>Pricing/Risk Alignment</fullName>
            </value>
            <value>
                <fullName>Limit Constraints</fullName>
            </value>
            <value>
                <fullName>Credit Fundamentals</fullName>
            </value>
            <value>
                <fullName>Off Strategy</fullName>
            </value>
            <value>
                <fullName>Country of Risk Aversion</fullName>
            </value>
            <value>
                <fullName>Sector Aversion</fullName>
            </value>
            <value>
                <fullName>Transaction Structure</fullName>
            </value>
            <value>
                <fullName>Legal Agreement Clauses</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>