force-app/main/default/objects/Investor_Participation__c/fields/Distribution_Party_Status__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Party_Status__c</fullName>
    <description>US-4609/ SGPRT-623 Status of the potential sale with the investor</description>
    <inlineHelpText>Indicates the status of the potential sale with the Investor OR the status with the seller.</inlineHelpText>
    <label>Distribution Party Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Engagement</fullName>
                <default>true</default>
                <label>Initial Engagement</label>
            </value>
            <value>
                <fullName>Credit Process</fullName>
            </value>
            <value>
                <fullName>Credit Approved</fullName>
            </value>
            <value>
                <fullName>Transferred</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>