force-app/main/default/objects/Investor_Participation__c/fields/Fee_Skim_bps__c.field-meta.xml
<CustomField>
    <fullName>Fee_Skim_bps__c</fullName>
    <description>Indicate fee skim in bps if applicable. Fee skim is defined as the fee income on underwritten, arranged and distributed portions of loans net of participation fees, plus insurance skim.  (i.e. equivalent to the value add that Distribution brings to the transaction.).
SGPRT-3852</description>
    <inlineHelpText>Indicate fee skim in bps if applicable. Fee skim is defined as the fee income on underwritten, arranged and distributed portions of loans net of participation fees, plus insurance skim.  (i.e. equivalent to the value add that Distribution brings to the transaction).</inlineHelpText>
    <label>Fee Skim (bps)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>