force-app/main/default/objects/Investor_Participation__c/fields/Fee_Skim_CCY__c.field-meta.xml
<CustomField>
    <fullName>Fee_Skim_CCY__c</fullName>
    <description>Indicate fee skim in currency if applicable. Fee skim is defined as the fee income on underwritten, arranged and distributed portions of loans net of participation fees, plus insurance skim.  (i.e. equivalent to the value add that Distribution brings to the transaction.)</description>
    <inlineHelpText>Indicate fee skim in currency if applicable. Fee skim is defined as the fee income on underwritten, arranged and distributed portions of loans net of participation fees, plus insurance skim.  (i.e. equivalent to the value add that Distribution brings to the transaction.)
Equally, it can be calculated as TOTAL FEES earned MINUS the PARTICIPATION FEE Debt Solutions would have earned if we had taken our hold position in this deal where it had been arranged by someone else under the same terms.</inlineHelpText>
    <label>Fee Skim (CCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>