force-app/main/default/objects/Investor_Participation__c/fields/Hold_Price__c.field-meta.xml
<CustomField>
    <fullName>Hold_Price__c</fullName>
    <description>If we are selling, enter price owned at as PAR (ie 100) minus any participation fees earned on Distribution Party Closed amount (distributed portion). Leave blank if we are buying.
SGPRT-3852</description>
    <inlineHelpText>If we are selling, enter price owned at as PAR (ie 100) minus any participation fees earned on Distribution Party Closed amount (distributed portion). Leave blank if we are buying.</inlineHelpText>
    <label>Hold Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>