force-app/main/default/objects/Investor_Participation__c/fields/Margin_Skim_bps__c.field-meta.xml
<CustomField>
    <fullName>Margin_Skim_bps__c</fullName>
    <description>Margin skim in bps if applicable
SGPRT-3852</description>
    <inlineHelpText>Margin skim in bps if applicable.</inlineHelpText>
    <label>Margin Skim (bps)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>