force-app/main/default/objects/Investor_Participation__c/fields/Specify_Decline_Reason_if_Other__c.field-meta.xml
<CustomField>
    <fullName>Specify_Decline_Reason_if_Other__c</fullName>
    <description>US-4609/ SGPRT-623 Decline reason if &quot;Other&quot; was selected</description>
    <label>Specify Decline Reason if Other</label>
    <type>TextArea</type>
</CustomField>