force-app/main/default/objects/Investor_Participation__c/fields/Trade_Price__c.field-meta.xml
<CustomField>
    <fullName>Trade_Price__c</fullName>
    <description>Price agreed for trade (PAR expressed as 100)
SGPRT-3852</description>
    <inlineHelpText>Price agreed for trade (PAR expressed as 100)</inlineHelpText>
    <label>Trade Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>