force-app/main/default/objects/Investor_Participation__c/validationRules/ClosedDateRequiredIfClosedAmountNotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>ClosedDateRequiredIfClosedAmountNotEmpty</fullName>
    <active>true</active>
    <description>US-4609</description>
    <errorConditionFormula>AND(NOT(ISBLANK( Distribution_Party_Closed__c  )),  ISBLANK( Distribution_Party_Closed_Date__c ) )</errorConditionFormula>
    <errorDisplayField>Distribution_Party_Closed_Date__c</errorDisplayField>
    <errorMessage>Please ensure you enter the Closed Date if Distribution Party Closed field has been entered</errorMessage>
</ValidationRule>