force-app/main/default/objects/Investor_Participation__c/validationRules/SpecifyDeclineReasonIfOther.validationRule-meta.xml
<ValidationRule>
    <fullName>SpecifyDeclineReasonIfOther</fullName>
    <active>true</active>
    <description>US-4609</description>
    <errorConditionFormula>AND(INCLUDES( Distribution_Party_Decline_Reason__c , &quot;Other&quot;),  ISBLANK( Specify_Decline_Reason_if_Other__c ) )</errorConditionFormula>
    <errorDisplayField>Specify_Decline_Reason_if_Other__c</errorDisplayField>
    <errorMessage>Please specify the Decline reason if &quot;Other&quot; was selected</errorMessage>
</ValidationRule>