force-app/main/default/objects/Investor_Participation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Distribution_Party__c</columns>
    <columns>Distribution_Party_Status__c</columns>
    <columns>Distribution_Party_Appetite__c</columns>
    <columns>Distribution_Party_Bid_Price__c</columns>
    <columns>Distribution_Party_Closed__c</columns>
    <columns>Distribution_Party_Closed_Date__c</columns>
    <columns>Distribution_Party_Decline_Reason__c</columns>
    <columns>Specify_Decline_Reason_if_Other__c</columns>
    <filterScope>Everything</filterScope>
    <label>View All</label>
</ListView>