force-app/main/default/objects/Investor_Participation__c/listViews/Short_View.listView-meta.xml
<ListView>
    <fullName>Short_View</fullName>
    <columns>NAME</columns>
    <columns>Distribution_Party__c</columns>
    <columns>Distribution_Party_Status__c</columns>
    <columns>Distribution_Party_Appetite__c</columns>
    <columns>Distribution_Party_Bid_Price__c</columns>
    <columns>Distribution_Party_Closed__c</columns>
    <filterScope>Everything</filterScope>
    <label>Short View</label>
</ListView>